# cite-or-die

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  goal.md  install.sh  pyproject.toml  secrets.enc.env
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  security.yml
app/: __init__.py  main.py
docs/: distribution.md  eval.md
docs/compliance/: data-flow.md  iso-42001.md  pentest-report.md  threat-model.md
docs/site/: index.html
examples/: MANIFEST.md  golden.yaml  sample.txt  t2ragbench_subset.jsonl
ops/caddy/: Caddyfile
ops/loki/: config.yaml
ops/otel/: collector.yaml
ops/prometheus/: alerts.yml  prometheus.yml
scripts/: download_corpus.py  download_t2ragbench_subset.py  install.sh  mutation_gate.py  provider_smoke.py  release_check.py  run_adversarial_probes.py  smoke.sh
scripts/record_demo/: package-lock.json  package.json  record.mjs
scripts/record_demo/videos/: page@8e7566ea958f46058924ed74727221e1.webm
src/cite_or_die/: __init__.py  __main__.py  cli.py
src/cite_or_die/api/: app.py
src/cite_or_die/auth/: authorizer.py  jwt.py
src/cite_or_die/core/: config.py  extractive_answer.py  models.py  service.py
src/cite_or_die/evals/: metrics.py
src/cite_or_die/graph/: __init__.py  index.py
src/cite_or_die/ingest/: chunker.py  loaders.py  pipeline.py
src/cite_or_die/observability/: metrics.py  tracing.py
src/cite_or_die/providers/: anthropic.py  base.py  factory.py  fake.py  ollama.py  openai.py  openai_compatible.py
tests/: conftest.py
tests/adversarial/: gen_adversarial_pdfs.py  test_phase5_adversarial.py  test_phase5_probe_runner.py
tests/eval/: test_eval_gate.py  test_phase6_graph_gate.py  test_t2ragbench_gate.py
tests/integration/: test_api.py  test_hybrid_retrieval.py  test_phase0_contract.py  test_phase2_walls.py  test_phase3_ui.py  test_phase4b_observability.py  test_provider_settings_api.py  test_service.py  test_upload_api.py
tests/load/: locustfile.py
tests/unit/: test_audit.py  test_authorizer.py  test_citation_graph.py  test_citation_verifier.py  test_extractive_answer.py  test_input_guard.py  test_providers.py  test_release_check.py  test_reranker.py  test_runtime_config.py
(+27 files in other folders)
