[project]
name = "cite-or-die"
version = "0.1.0"
description = "Privacy-first RAG with verbatim-verified citations and tenant-isolated retrieval."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Abid Abdul-Gafoor" }]
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.18,<0.1.0",
  "httpx>=0.28.0,<0.29.0",
  "PyJWT>=2.10.0,<3.0.0",
  "typer>=0.15.0,<0.16.0",
  "rich>=13.9.0,<14.0.0",
  "qdrant-client>=1.12.0,<1.13.0",
  "rank-bm25>=0.2.2,<0.3.0",
  "pypdf>=5.1.0,<6.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "prometheus-client>=0.21.0,<0.22.0",
  "opentelemetry-api>=1.28.0,<2.0.0",
  "opentelemetry-sdk>=1.28.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0.0",
  "opentelemetry-exporter-otlp>=1.28.0,<2.0.0",
  "casbin>=1.40.0,<2.0.0",
  "presidio-analyzer==2.2.358",
  "presidio-anonymizer==2.2.358",
  "llm-guard==0.3.16",
]

[project.optional-dependencies]
local-models = [
  "FlagEmbedding>=1.3.3,<2.0.0",
  "sentence-transformers>=3.3.0,<4.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "hypothesis>=6.119.0,<7.0.0",
  "ruff>=0.8.0,<1.0.0",
  "pyrefly>=1.0.0,<2.0.0",
  "mypy>=1.13.0,<2.0.0",
  "locust>=2.32.0,<3.0.0",
  "reportlab>=4.5.1,<5.0.0",
  "mutmut>=2.4.0,<3.0.0",
]

[project.scripts]
cite-or-die = "cite_or_die.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cite_or_die", "app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]
ignore = ["B008", "S101", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S106"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["cite_or_die"]

[tool.pyrefly]
project-includes = ["src/cite_or_die"]
search-path = ["src"]
python-version = "3.11.0"
